new plugin to stop prettier eslint weirdness

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["plugin:react/recommended", "standard"],
+  "extends": ["plugin:react/recommended", "standard", "prettier"],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
@@ -11,6 +11,6 @@
   },
   "plugins": ["react"],
   "rules": {
-    "semi": [2, "always"]
+    "indent": "error"
   }
 }
